--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,9 @@
           "backdrop-filter"
         ]
       }
-    ]
+    ],
+    "disown-opener": "off",
+    "typescript-config/strict": "off",
+    "typescript-config/consistent-casing": "off"
   }
 }
